fix(archive): harden history correctness and resilience